Stonebreak: Added fast util and generation fixes